tests/lean/autobound_and_macroscopes.lean.expected.out
autobound_and_macroscopes.lean:2:15: error: unknown identifier 'x✝'
autobound_and_macroscopes.lean:2:19: error: unknown identifier 'x✝'
